--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -43,6 +43,7 @@
                             android:layout_width="90dp"
                             android:layout_height="50dp"
                             android:layout_marginEnd="17dp"
+                            android:layout_marginBottom="24dp"
                             android:background="@color/design_default_color_primary"
                             android:elevation="2dp"
                             android:text="Settings"
@@ -60,6 +61,7 @@
                             android:layout_height="50dp"
                             android:layout_marginStart="11dp"
                             android:layout_marginEnd="310dp"
+                            android:layout_marginBottom="24dp"
                             android:background="@color/design_default_color_primary"
                             android:elevation="2dp"
                             android:text="Profile"
