--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -42,37 +42,30 @@
                             style="?android:attr/borderlessButtonStyle"
                             android:layout_width="90dp"
                             android:layout_height="50dp"
-                            android:layout_marginEnd="17dp"
-                            android:layout_marginBottom="24dp"
                             android:background="@color/design_default_color_primary"
                             android:elevation="2dp"
                             android:text="Settings"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="15sp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintWidth_percent="0.7" />
+                            app:layout_constraintWidth_percent="0.7"
+                            tools:layout_editor_absoluteX="10dp"
+                            tools:layout_editor_absoluteY="520dp" />
 
                         <Button
                             android:id="@+id/btn_profile"
                             style="?android:attr/borderlessButtonStyle"
                             android:layout_width="90dp"
                             android:layout_height="50dp"
-                            android:layout_marginStart="11dp"
-                            android:layout_marginEnd="310dp"
-                            android:layout_marginBottom="24dp"
                             android:background="@color/design_default_color_primary"
                             android:elevation="2dp"
                             android:text="Profile"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="15sp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintWidth_percent="0.7" />
+                            app:layout_constraintWidth_percent="0.7"
+                            tools:layout_editor_absoluteX="10dp"
+                            tools:layout_editor_absoluteY="420dp" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
