--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -42,30 +42,34 @@
                             style="?android:attr/borderlessButtonStyle"
                             android:layout_width="90dp"
                             android:layout_height="50dp"
+                            android:layout_marginEnd="305dp"
+                            android:layout_marginBottom="307dp"
                             android:background="@color/design_default_color_primary"
                             android:elevation="2dp"
                             android:text="Settings"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="15sp"
-                            app:layout_constraintWidth_percent="0.7"
-                            tools:layout_editor_absoluteX="10dp"
-                            tools:layout_editor_absoluteY="520dp" />
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintWidth_percent="0.7" />
 
                         <Button
                             android:id="@+id/btn_profile"
                             style="?android:attr/borderlessButtonStyle"
                             android:layout_width="90dp"
                             android:layout_height="50dp"
+                            android:layout_marginEnd="305dp"
+                            android:layout_marginBottom="364dp"
                             android:background="@color/design_default_color_primary"
                             android:elevation="2dp"
                             android:text="Profile"
                             android:textAllCaps="false"
                             android:textColor="#FFFFFF"
                             android:textSize="15sp"
-                            app:layout_constraintWidth_percent="0.7"
-                            tools:layout_editor_absoluteX="10dp"
-                            tools:layout_editor_absoluteY="420dp" />
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="@id/btn_settings"
+                            app:layout_constraintWidth_percent="0.7" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
