--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -37,43 +37,47 @@
                     android:focusable="true"
                     android:focusableInTouchMode="true">
 
-                        <Button
-                            android:id="@+id/btn_settings"
-                            style="?android:attr/borderlessButtonStyle"
-                            android:layout_width="90dp"
-                            android:layout_height="50dp"
-                            android:layout_marginEnd="305dp"
-                            android:layout_marginBottom="307dp"
-                            android:background="@color/design_default_color_primary"
-                            android:elevation="2dp"
-                            android:text="Settings"
-                            android:textAllCaps="false"
-                            android:textColor="#FFFFFF"
-                            android:textSize="15sp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintWidth_percent="0.7" />
-
-                        <Button
-                            android:id="@+id/btn_profile"
-                            style="?android:attr/borderlessButtonStyle"
-                            android:layout_width="90dp"
-                            android:layout_height="50dp"
-                            android:layout_marginEnd="305dp"
-                            android:layout_marginBottom="364dp"
-                            android:background="@color/design_default_color_primary"
-                            android:elevation="2dp"
-                            android:text="Profile"
-                            android:textAllCaps="false"
-                            android:textColor="#FFFFFF"
-                            android:textSize="15sp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="@id/btn_settings"
-                            app:layout_constraintWidth_percent="0.7" />
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
         </ScrollView>
+
+        <Button
+            android:id="@+id/btn_profile"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="90dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginEnd="300dp"
+            android:layout_marginBottom="228dp"
+            android:background="@color/design_default_color_primary"
+            android:elevation="2dp"
+            android:text="Profile"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintWidth_percent="0.7" />
+
+        <Button
+            android:id="@+id/btn_settings"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="90dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginEnd="300dp"
+            android:layout_marginBottom="167dp"
+            android:background="@color/design_default_color_primary"
+            android:elevation="2dp"
+            android:text="Settings"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintWidth_percent="0.7" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
