--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -42,32 +42,13 @@
         </ScrollView>
 
         <Button
-            android:id="@+id/btn_profile"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="90dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="21dp"
-            android:layout_marginEnd="300dp"
-            android:layout_marginBottom="228dp"
-            android:background="@color/design_default_color_primary"
-            android:elevation="2dp"
-            android:text="Profile"
-            android:textAllCaps="false"
-            android:textColor="#FFFFFF"
-            android:textSize="15sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintWidth_percent="0.7" />
-
-        <Button
             android:id="@+id/btn_settings"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="90dp"
             android:layout_height="50dp"
-            android:layout_marginStart="21dp"
+            android:layout_marginStart="10dp"
             android:layout_marginEnd="300dp"
-            android:layout_marginBottom="167dp"
+            android:layout_marginBottom="36dp"
             android:background="@color/design_default_color_primary"
             android:elevation="2dp"
             android:text="Settings"
@@ -76,6 +57,27 @@
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintWidth_percent="0.7" />
+
+        <Button
+            android:id="@+id/btn_profile"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="90dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="300dp"
+            android:layout_marginBottom="96dp"
+            android:background="@color/design_default_color_primary"
+            android:elevation="2dp"
+            android:text="Profile"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintWidth_percent="0.7" />
 
